Product_details UI

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import 'antd/dist/antd.min.css';
 
 body {
   margin: 0;
@@ -7,4 +8,6 @@ body {
   padding: 0;
 }
 
-html {}
+html {
+  font-size: 62.5%;
+}
